# short_url

./: .env  docker-compose.yml
backend/: .env.dev  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 365cd8fc2989_initial_commit.py  6e17baebd108_add_urls_table.py  acb02b501996_first_commit.py
backend/app/: config.py  crud.py  database.py  dependencies.py  keygen.py  main.py  models.py  routers.py  schemas.py
