[tool.poetry]
name = "short-url"
version = "0.1.0"
description = ""
authors = ["solomevich-egor <solomevich.egor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.24"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"
validators = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
